# invenio-xrootd

./: .editorconfig  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  INSTALL.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  run-docker.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-release.yml  tests.yml
docs/: api.rst  conf.py  index.rst  usage.rst
invenio_xrootd/: __init__.py  errors.py  ext.py  storage.py
tests/: conftest.py  test_storage.py
